# visionops_v2

./: .gitignore  Makefile  README.md  docker-compose.yml  dvc.yaml  requirements.txt
.dvc/: config
.github/workflows/: mlops-pipeline.yml  mlops_pipeline.yml  scheduled_retrain.yml
docs/: 新手入门指南.md
edge/: requirements-edge.txt  start_collector.sh
edge/collector/: README.md  app.py  requirements.txt
edge/collector/backend/: config.py  main.py
edge/collector/static/: app.js  index.html  styles.css
edge/deploy/: README_v0.3.1.md  README_v0.3_new.md  README_v0.4.1.md  README_v0.4.2.1.md  README_v0.4.2.md  README_v0.4.3.md  README_v0.5.0_cpp_proxy.md  deploy_cpp.sh  push.sh  setup_edge.sh  stop_inference.sh  switch_model.sh  visionops-inference-cpp.service  visionops-inference.service  visionops-monitor.service
edge/inference/: engine.py  pipeline_engine.py
edge/inference_cpp/: CMakeLists.txt
edge/inference_cpp/include/visionops/: rga_preprocess.hpp  stream_backend.hpp
edge/inference_cpp/scripts/: start_visionops_inference_cpp.sh
edge/inference_cpp/src/: main.cpp  rga_preprocess.cpp  stream_backend.cpp
edge/monitor/: monitor.py
edge/robot_gateway/: active_detector.py  active_push_client.py  gateway.py  image_source.py  inference_client.py  protocol.py  push_server.py  result_mapper.py  test_client.py
edge/robot_gateway/modbus_common/: register_map_v2.md  register_mapper.py  visionops_result_parser.py
edge/robot_gateway/modbus_rtu/: install_modbus_rtu_service.sh  modbus_rtu.env  modbus_rtu_slave.py  register_map.md  visionops-modbus-rtu.service
edge/robot_gateway/modbus_tcp/: install_modbus_tcp_service.sh  modbus_tcp.env  modbus_tcp_server.py  register_map.md  test_modbus_tcp_client.py  visionops-modbus-tcp.service
edge/runtime/: .gitignore  class_names.yaml  cpp.env  edge.env  runtime_overrides.yaml
pipeline/: README.md
pipeline/configs/: .gitignore  data.yaml  deploy.yaml  detection_data.yaml  detection_export.yaml  detection_mlops.yaml  detection_rknn.yaml  detection_train.yaml  export.yaml  mlops.yaml  prometheus.yml  rknn.yaml  task.yaml  train.yaml
pipeline/configs/presets/: classification.yaml  detection.yaml  detedtion  obb.yaml  segmentation.yaml
pipeline/core/: config.py  io.py
pipeline/stages/: convert_rknn.py  convert_rknn_detection.py  evaluate.py  evaluate_detection.py  export_onnx.py  export_onnx_detection.py  preprocess.py  preprocess_detection.py  register_model.py  register_model_detection.py  train.py  train_detection.py
pipeline/tasks/classification/: convert_rknn.py  evaluate.py  export_onnx.py  preprocess.py  register_model.py  train.py
pipeline/utils/: render_task_config.py
server/annotation/: annotation_app.py  label_io.py
server/api/: Dockerfile  main.py
server/data_ingest/: ingest_uploaded_package.py
server/mlops/: __init__.py  retrain_scheduler.py
server/training/: __init__.py  model_utils.py
server/workflow/: accept_reviewed_detection.py  control_panel_app.py
(+38 files in other folders)
